--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,12 @@
 
 # Site settings
 title: J&J Trekking
-email: jjtrekking@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   La montagna è fatta per tutti, non solo per gli alpinisti:
   per coloro che desiderano il riposo nella quiete come per
   coloro che cercano nella fatica un riposo ancora più forte.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" # the base hostname & protocol for your site
-twitter_username: jjtrekking
-github_username:  jjtrekking
+url: "http://jjtrekking.github.io" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
