testing why not loading css

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # this means to ignore newlines until "baseurl:"
   La montagna è fatta per tutti, non solo per gli alpinisti:
   per coloro che desiderano il riposo nella quiete come per
   coloro che cercano nella fatica un riposo ancora più forte.
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://jjtrekking.github.io" # the base hostname & protocol for your site
 
 # Build settings
