--- a/_config.yml
+++ b/_config.yml
@@ -39,3 +39,8 @@ defaults:
       type: tracks
     values:
       layout: track
+  -
+    scope:
+      path: "assets/img"
+    values:
+      image: true
