--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ collections:
 defaults:
   -
     scope:
-      path: "itinerari"
+      path: "itinerari/"
       type: tracks
     values:
       layout: track
