--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: J&J Trekking
 description: > # this means to ignore newlines until "baseurl:"
@@ -20,9 +13,6 @@ markdown: kramdown
 kramdown:
   input: GFM
 
-sass:
-  sass_dir: _sass
-
 include: ['_pages']
 
 # Collections
@@ -31,7 +21,7 @@ collections:
     output: true
     permalink: /itinerari/:path
 
-# defaults
+# Defaults (this does not seem to work on ghpages :P)
 defaults:
   -
     scope:
